    TODO: Drag and drop from icon view should be file based, not TIFF pasteboard data
    TODO: Fix status menu output issue
    TODO: Clicked row contextual menu handling
    TODO: Refactor TMP_STDIN_PATH
    TODO: Update documentation & man page, remove refs to options that are gone (text encoding, secure script)
    TODO: Set CFBundleTypeRole to silence errors

    * Fixed bug where text settings were not properly loaded by the GUI
    * Fixed bug where bundling files with the -f flag didn't work in the command line tool
    * Fixed bug where the command line tool would erroneously try to validate whole argument strings instead of individual UTI strings
    * Fixed bug where suffix editing buttons remained enabled when they shouldn't be
    * Got rid of text encoding settings. Platypus now uses UTF8.
    * Got rid of "Secure bundled script option", which is useless bullshit anyway
    * Bundled files table view now uses combined image and text cell instead of two columns
    * Renamed Advanced menu to Action
    * Fixed issue where main application window would not remember its last position

5.1
    * New Build All Examples feature
    * ScriptExec windows now remember window size and position between launches
    * Fixed issue where MainMenu.nib was stripped and thus not editable using XCode
    * Smarter handling of dropped files via more intelligent methods to determine if a file is a script
    * Fixed issue with window behaviour during resizing in Progress Bar interface
    * Added new WebViewDroplet example which lists dropped files using HTML output
    * Fixed critical issue with Web View interface type
    * Automatic app name generation from script name now respects camelCase and strips whitespace
    * Using NSString constants for NSUserDefault string keys
    * clearAllFields method uses default spec to set controls
    * Give image names for interface type and interpreter a filename prefix indicating family
    * Added build script for cat2html